# queryer

./: Cargo.toml  README.md  juventus.json
examples/: covid.rs  dialect.rs  dialect_polars.rs  dialect_sql.rs  juventus.rs  ps.rs
src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
