[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

description = "A useful tool for use SQL to query data from `url`, `file` and `comm`."
license = "MIT"
documentation = "https://docs.rs/queryer"
homepage = "https://github.com/kindywu"
repository = "https://github.com/kindywu/queryer"

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
polars = { version = "0.40.0", features = ["lazy", "polars-io", "json"] }
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
sqlparser = "0.47.0"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
